# ComfyUI-FasterLivePortrait

./: .gitignore  Dockerfile  README.md  build_grid_sample3d_plugin.sh  config.py  nodes.py  pyproject.toml  requirements.txt
examples/: comfystream_workflow.json
scripts/: build_fasterliveportrait_trt.sh  build_grid_sample3d_plugin.sh  onnx_to_trt.py
