[build-system]
requires = ["setuptools>=64.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "FasterLivePortrait-Realtime"
description = "Improve mouth tracking with live AI Video"
version = "0.0.1"
license = { file = "LICENSE" }
dependencies = [
    "faster-live-portrait @ git+https://github.com/varshith15/FasterLivePortrait@c5bfb24f5ea40ac382dcedfaea22d331b59efe0b",
    "faster-live-portrait-std @ git+https://github.com/varshith15/FasterLivePortrait@a7c99bacddaa0a3cd223945bcf9e8ecfc0621f8c",
]

[project.optional-dependencies]
dev = ["pytest", "pytest-cov"]

[project.urls]
repository = "https://github.com/pschroedl/ComfyUI-FasterLivePortrait"

[tool.comfy]
PublisherId = "comfyui-faster-live-portrait"
DisplayName = "ComfyUI Faster Live Portrait"
Icon = "https://raw.githubusercontent.com/livepeer/comfystream-docs/main/logo/icon-light-120px.svg" # SVG, PNG, JPG or GIF (MAX. 800x400px)

[tool.setuptools]
package-dir = {"" = "."}

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]} 
